[package]
name = "pdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
uuid = "1.7.0"
pkarr = { version = "1.1.2", features = ["dht", "relay"]}
reqwest = "0.12.2"
z32 = "1.1.1"
