[package]
name = "pdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
uuid = "1.7.0"
pkarr = { git = "https://github.com/Nuhvi/pkarr", branch = "v2" }
reqwest = { version = "0.12.2", features = ["blocking", "cookies", "json"] }
z32 = "1.1.1"
blake3 = "1.5.1"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
rand = { version = "0.8.5", features = ["getrandom"] }
thiserror = "1.0.58"

[dev-dependencies]
mainline = { git = "https://github.com/Nuhvi/mainline", branch = "v2" }
mockito = "1.4.0"
